unpackaged/main/default/objects/LTE__Menu_Item__c/LTE__Menu_Item__c.object-meta.xml
<CustomObject>
    <description>Menu Items create a hierarchy of links to pages, urls, actions, topics, and objects.</description>
    <label>Community Menu Item</label>
    <nameField>
        <label>Community Menu Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Menu Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>