unpackaged/main/default/objects/LTE__Menu_Item__c/fields/LTE__Default_List_View__c.field-meta.xml
<CustomField>
    <fullName>LTE__Default_List_View__c</fullName>
    <description>** Required for Type Salesforce Object ** Defines the API name of the List View used for the Salesforce object page</description>
    <inlineHelpText>** Required for Type Salesforce Object ** Defines the API name of the List View used for the Salesforce object page</inlineHelpText>
    <label>Default List View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>