unpackaged/main/default/objects/LTE__Menu_Item__c/fields/LTE__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>LTE__Display_Order__c</fullName>
    <description>The numerical value defined in this field dictates the order this menu item will display in the member community.</description>
    <inlineHelpText>The numerical value defined in this field dictates the order this menu item will display in the member community.</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>