unpackaged/main/default/objects/LTE__Menu_Item__c/fields/LTE__Enable_Access_Permissions__c.field-meta.xml
<CustomField>
    <fullName>LTE__Enable_Access_Permissions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field restricts the visibility of the menu item to those site users that have the defined badges.</description>
    <inlineHelpText>This field restricts the visibility of the menu item to those site users that have the defined badges.</inlineHelpText>
    <label>Enable Access Permissions</label>
    <type>Checkbox</type>
</CustomField>