unpackaged/main/default/objects/LTE__Menu_Item__c/fields/LTE__Is_Profile_Menu_Item__c.field-meta.xml
<CustomField>
    <fullName>LTE__Is_Profile_Menu_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the menu item to be the profile navigational item.</description>
    <inlineHelpText>Defines the menu item to be the profile navigational item.</inlineHelpText>
    <label>Is Profile Menu Item</label>
    <type>Checkbox</type>
</CustomField>