unpackaged/main/default/objects/LTE__Menu_Item__c/fields/LTE__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>LTE__Object_Type__c</fullName>
    <description>** Required for Type Salesforce Object ** Defines the API name of the object used for the Salesforce object page</description>
    <inlineHelpText>** Required for Type Salesforce Object ** Defines the API name of the object used for the Salesforce object page</inlineHelpText>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>