unpackaged/main/default/objects/LTE__Menu_Item__c/fields/LTE__Open_Link_in_Same_Tab__c.field-meta.xml
<CustomField>
    <fullName>LTE__Open_Link_in_Same_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** Used for Type External URL ** When checked, the menu item will create a new tab in the browser for navigation to the URL destination.</description>
    <inlineHelpText>** Used for Type External URL ** When checked, the menu item will create a new tab in the browser for navigation to the URL destination.</inlineHelpText>
    <label>Open Link in Same Tab</label>
    <type>Checkbox</type>
</CustomField>