unpackaged/main/default/objects/LTE__Menu_Item__c/fields/LTE__Parent_Menu_Item__c.field-meta.xml
<CustomField>
    <fullName>LTE__Parent_Menu_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated when a menu item is displayed as a drop down for navigation in the community.</description>
    <inlineHelpText>Populated when a menu item is displayed as a drop down for navigation in the community.</inlineHelpText>
    <label>Parent Menu Item</label>
    <referenceTo>LTE__Menu_Item__c</referenceTo>
    <relationshipName>Menu_Items</relationshipName>
    <type>Lookup</type>
</CustomField>