unpackaged/main/default/objects/LTE__Menu_Item__c/fields/LTE__Profile_Menu_Item_Component__c.field-meta.xml
<CustomField>
    <fullName>LTE__Profile_Menu_Item_Component__c</fullName>
    <description>This field defines the component to be displayed for the profile menu item.</description>
    <inlineHelpText>This field defines the component to be displayed for the profile menu item.</inlineHelpText>
    <label>Profile Menu Item Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>