unpackaged/main/default/objects/LTE__Menu_Item__c/fields/LTE__Publicly_Available__c.field-meta.xml
<CustomField>
    <fullName>LTE__Publicly_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked this menu item is displayed to unauthenticated users.</description>
    <inlineHelpText>When checked this menu item is displayed to unauthenticated users.</inlineHelpText>
    <label>Publicly Available</label>
    <type>Checkbox</type>
</CustomField>