unpackaged/main/default/objects/LTE__Menu_Item__c/fields/LTE__Site__c.field-meta.xml
<CustomField>
    <fullName>LTE__Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>** Required ** Relates the menu items to the site.</description>
    <inlineHelpText>** Required ** Relates the menu items to the site.</inlineHelpText>
    <label>Community Site</label>
    <referenceTo>LTE__Site__c</referenceTo>
    <relationshipLabel>Community Menu Items</relationshipLabel>
    <relationshipName>Community_Menu_Items</relationshipName>
    <type>Lookup</type>
</CustomField>