unpackaged/main/default/objects/LTE__Menu_Item__c/fields/LTE__Type__c.field-meta.xml
<CustomField>
    <fullName>LTE__Type__c</fullName>
    <defaultValue>&quot;Community Page&quot;</defaultValue>
    <description>Defines the type of menu navigation for this Menu Item.</description>
    <inlineHelpText>Defines the type of menu navigation for this Menu Item.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External URL</fullName>
            </value>
            <value>
                <fullName>Menu Label</fullName>
            </value>
            <value>
                <fullName>Salesforce Object</fullName>
            </value>
            <value>
                <fullName>Community Page</fullName>
                <isActive>false</isActive>
                <label>Community Page</label>
            </value>
            <value>
                <fullName>Global Action</fullName>
                <isActive>false</isActive>
                <label>Global Action</label>
            </value>
            <value>
                <fullName>Navigational Topic</fullName>
                <isActive>false</isActive>
                <label>Navigational Topic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>