unpackaged/main/default/objects/LTE__Menu_Item__c/fields/LTE__URL__c.field-meta.xml
<CustomField>
    <fullName>LTE__URL__c</fullName>
    <description>** Required for Type External URL ** This field references URL field for navigation.</description>
    <inlineHelpText>** Required for Type External URL ** This field references URL field for navigation.</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>