unpackaged/main/default/objects/LTE__Menu_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LTE__Site__c</columns>
    <columns>LTE__Display_Order__c</columns>
    <columns>LTE__URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>