unpackaged/main/default/objects/LTE__Menu_Item__c/listViews/Eccho_connect.listView-meta.xml
<ListView>
    <fullName>Eccho_connect</fullName>
    <columns>NAME</columns>
    <columns>LTE__URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LTE__Site__c</field>
        <operation>contains</operation>
        <value>Eccho</value>
    </filters>
    <label>ECCHO Online</label>
</ListView>